# repgenr

./: .gitignore  .nf-core.yml  CHANGELOG.md  CITATIONS.md  CODE_OF_CONDUCT.md  LICENSE  README.md  environment.yml  nf-test.config  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: adding-tools.md  architecture.md  containers.md  output.md  usage.md  verification.md
legacy/: vgenome.py
nextflow/: main.nf  nextflow.config  nextflow_schema.json
nextflow/assets/: params_example.json
nextflow/modules/local/: derep_chunk.nf  derep_merge.nf  dereplicate.nf  genome.nf  metadata.nf  phylo.nf  tree2tax.nf  vgenome.nf  vmetadata.nf
nextflow/modules/local/dataflow/: genome.nf  metadata.nf  phylo.nf  tree2tax.nf  vacquire.nf
nextflow/subworkflows/local/: acquire.nf  bacterial.nf  bacterial_dataflow.nf  dereplicate_scatter.nf  viral.nf  viral_dataflow.nf
nextflow/tests/: acquire.nf.test  acquire_scatter.nf  acquire_scatter.nf.test  bacterial_dataflow.nf  bacterial_dataflow.nf.test  derep_chunk.nf.test  dereplicate_scatter.nf  dereplicate_scatter.nf.test  local_dataflow.nf  local_dataflow.nf.test  pipeline_help.nf.test  viral_dataflow.nf  viral_dataflow.nf.test
nextflow/tests/data/e2e_genomes/: Testaceae_Testus_alpha_GCA_000001.1.fasta  Testaceae_Testus_alpha_GCA_000002.1.fasta  Testaceae_Testus_alpha_GCA_000003.1.fasta  Testaceae_Testus_beta_GCA_000004.1.fasta  Testaceae_Testus_beta_GCA_000005.1.fasta  Testaceae_Testus_gamma_GCA_000006.1.fasta
nextflow/tests/data/genomes/: Fam_g_s_GCA_000001.1.fasta  Fam_g_s_GCA_000002.1.fasta  Fam_g_s_GCA_000003.1.fasta  Fam_g_s_GCA_000004.1.fasta
scripts/: bench_derep_hotpaths.py  bench_manifest.py
src/repgenr/: __init__.py
src/repgenr/aligners/: __init__.py  base.py  cactus.py  progressivemauve.py  sibeliaz.py
src/repgenr/cli/: base.py  cmd_bacterial.py  cmd_misc.py  cmd_phylo.py  cmd_run.py  cmd_steps.py  cmd_viral.py  main.py
src/repgenr/converters/: __init__.py  gfa_to_fasta.py  hal_to_maf.py  maf_to_fasta.py  xmfa_to_fasta.py
src/repgenr/core/: __init__.py  binaries.py  config.py  containers.py  context.py  contracts.py  errors.py  executors.py  http.py  logging.py  manifest.py  plugins.py  process.py  versions.py
src/repgenr/dereplicators/: __init__.py  base.py  drep.py  galah.py  skder.py  sourmash.py
src/repgenr/snptypers/: __init__.py  base.py  gubbins.py  ksnp.py  parsnp.py  simple.py  snippy.py
src/repgenr/stages/: __init__.py  derep_steps.py  derep_stock.py  derep_unpack.py  dereplicate.py  genome.py  genome_steps.py  glance.py  metadata.py  phylo.py  snptype.py  tree2tax.py  vgenome.py  vmetadata.py
src/repgenr/tree/: __init__.py  newick.py
src/repgenr/treebuilders/: __init__.py  base.py  fasttree.py  iqtree.py  mashtree.py  raxmlng.py  sourmash.py
src/repgenr/viral/: __init__.py  _common.py  bvbrc.py  entrez.py  ncbi_virus.py  selection.py
tests/: conftest.py
tests/integration/: test_bvbrc_select.py  test_cli_errors.py  test_dataflow_phylo_steps.py  test_derep_steps.py  test_derep_stock.py  test_derep_unpack_stage.py  test_dereplicate_stage.py  test_glance.py  test_hierarchical_chunking.py  test_ncbi_virus.py  test_phylo_stage.py  test_resume.py  test_resume_staleness.py  test_run_orchestrator.py  test_snptype_stage.py  test_status.py  test_target_reps.py  test_taxonomy_reduce.py  test_tree2tax.py  test_tree2tax_stage.py  test_versions_command.py  test_viral_selection.py
tests/unit/: test_aligner_params.py  test_auto_num_processes.py  test_auto_select.py  test_binaries.py  test_branchwater_probe.py  test_cli_validation.py  test_containers.py  test_contracts.py  test_converters.py  test_dense_ceiling.py  test_drep_staging.py  test_entrez_parse.py  test_executors.py  test_genome_download.py  test_genome_name_parse.py  test_http.py  test_ingest_validation.py  test_link_or_copy.py  test_maf_to_fasta.py  test_manifest.py  test_metadata_api.py  test_newick.py  test_newick_nj.py  test_phylo_divergence.py  test_plugins.py  test_process_timeout.py  test_selection_contract.py  test_simple_core_snps.py  test_skder_parsing.py  test_sketch_cache.py  test_sourmash_cluster.py  test_stage_fingerprint.py  test_versions_fragment.py  test_viral_parsing.py  test_xmfa_to_fasta.py
