[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repgenr"
version = "2.0.0.dev0"
description = "Representative-Genome Repositories: modular genome dereplication, alignment, SNP typing and phylogenetics"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "jaclew" }]
dependencies = [
    "typer>=0.12",
    "PyYAML>=6.0",
    "requests>=2.31",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "biopython>=1.83",
    "ete3>=3.1.3",
    # ete3 still imports the stdlib 'cgi' module, removed in Python 3.13.
    "legacy-cgi>=2.6; python_version >= '3.13'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
    "types-requests",
]

[project.scripts]
repgenr = "repgenr.cli.main:app"

# In-tree adapters are discovered via the same entry-point mechanism third
# parties use, so core never imports a specific adapter directly.
[project.entry-points."repgenr.dereplicators"]
drep = "repgenr.dereplicators.drep:DrepDereplicator"
skder = "repgenr.dereplicators.skder:SkderDereplicator"
galah = "repgenr.dereplicators.galah:GalahDereplicator"
sourmash = "repgenr.dereplicators.sourmash:SourmashDereplicator"

[project.entry-points."repgenr.aligners"]
progressivemauve = "repgenr.aligners.progressivemauve:ProgressiveMauveAligner"
cactus = "repgenr.aligners.cactus:CactusAligner"
sibeliaz = "repgenr.aligners.sibeliaz:SibeliazAligner"

[project.entry-points."repgenr.snptypers"]
simple = "repgenr.snptypers.simple:SimpleSnpTyper"
snippy = "repgenr.snptypers.snippy:SnippyTyper"
parsnp = "repgenr.snptypers.parsnp:ParsnpTyper"

[project.entry-points."repgenr.treebuilders"]
iqtree = "repgenr.treebuilders.iqtree:IqtreeBuilder"
fasttree = "repgenr.treebuilders.fasttree:FasttreeBuilder"
raxmlng = "repgenr.treebuilders.raxmlng:RaxmlNgBuilder"
mashtree = "repgenr.treebuilders.mashtree:MashtreeBuilder"
sourmash = "repgenr.treebuilders.sourmash:SourmashBuilder"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Typer relies on function-call defaults (typer.Option/Argument).
per-file-ignores = { "src/repgenr/cli/*.py" = ["B008"] }

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_binary: test needs an external bioinformatics binary present on PATH",
]
