[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repgenr"
version = "2.0.0"
description = "Representative-Genome Repositories: modular genome dereplication, alignment, SNP typing and phylogenetics"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "jaclew" }]
# Upper caps to the next major: RepGenR is an application (a pinned CLI/pipeline,
# not a library others resolve against), so capping guards a fresh install from a
# surprise breaking major (e.g. numpy 3, biopython 2) without the downstream
# resolver friction caps cause for libraries. Raise a cap when that major is
# vetted. For fully reproducible scientific runs, pin via the conda lock (see
# environment.yml), which also covers the external bioinformatics tools.
dependencies = [
    "typer>=0.12,<1.0",
    "PyYAML>=6.0,<7.0",
    "requests>=2.31,<3.0",
    "numpy>=1.26,<3.0",
    "matplotlib>=3.8,<4.0",
    "biopython>=1.83,<2.0",
    # dendropy: pure-Python phylogenetics (tree2tax rooting/topology). Replaced
    # ete3, which dragged in heavy/GUI deps and the removed stdlib 'cgi' module.
    "dendropy>=4.6,<6.0",
]

[project.optional-dependencies]
# Sparse sourmash dereplication back-end (manysketch + pairwise). Optional: the
# sourmash adapter falls back to dense `sourmash compare` when it is absent.
sparse = [
    "sourmash_plugin_branchwater>=0.9",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
    "types-requests",
]

[project.scripts]
repgenr = "repgenr.cli.main:app"

# In-tree adapters are discovered via the same entry-point mechanism third
# parties use, so core never imports a specific adapter directly.
[project.entry-points."repgenr.dereplicators"]
drep = "repgenr.dereplicators.drep:DrepDereplicator"
skder = "repgenr.dereplicators.skder:SkderDereplicator"
galah = "repgenr.dereplicators.galah:GalahDereplicator"
sourmash = "repgenr.dereplicators.sourmash:SourmashDereplicator"

[project.entry-points."repgenr.aligners"]
progressivemauve = "repgenr.aligners.progressivemauve:ProgressiveMauveAligner"
cactus = "repgenr.aligners.cactus:CactusAligner"
sibeliaz = "repgenr.aligners.sibeliaz:SibeliazAligner"

[project.entry-points."repgenr.snptypers"]
simple = "repgenr.snptypers.simple:SimpleSnpTyper"
snippy = "repgenr.snptypers.snippy:SnippyTyper"
parsnp = "repgenr.snptypers.parsnp:ParsnpTyper"

[project.entry-points."repgenr.treebuilders"]
iqtree = "repgenr.treebuilders.iqtree:IqtreeBuilder"
fasttree = "repgenr.treebuilders.fasttree:FasttreeBuilder"
raxmlng = "repgenr.treebuilders.raxmlng:RaxmlNgBuilder"
mashtree = "repgenr.treebuilders.mashtree:MashtreeBuilder"
sourmash = "repgenr.treebuilders.sourmash:SourmashBuilder"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Typer relies on function-call defaults (typer.Option/Argument).
per-file-ignores = { "src/repgenr/cli/*.py" = ["B008"] }

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_binary: test needs an external bioinformatics binary present on PATH",
]

[tool.coverage.run]
source = ["repgenr"]

[tool.coverage.report]
show_missing = true
